--- a/src/assets/grid.css
+++ b/src/assets/grid.css
@@ -13,20 +13,21 @@ body {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+  max-width: 750px;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    max-width: 970px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1440px;
+    max-width: 1440px;
   }
 }
 .container-fluid {
