--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,6 +20,20 @@ input[type="text"]{
   font-size: 14px;
   line-height: 25px;
 }
+input[type="password"]{
+  border: 1px solid #EDEEF3;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-repeat: no-repeat;
+  background-position-x: 5px;
+  background-position-y: 5px;
+  color: #55616E;
+  font-family: "Helvetica Neue";
+  font-size: 14px;
+  line-height: 25px;
+}
 textarea{
   border: 1px solid #EDEEF3;
   border-radius: 4px;
@@ -38,6 +52,41 @@ textarea{
 .res-div{
   display: none;
   width: 100%;
+}
+.grid-title{
+  width: 100%;
+  color: #000000;
+  font-family: "Circular Std";
+  font-size: 12px;
+  font-weight: 300;
+  letter-spacing: 0.21px;
+  line-height: 15px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+.svg path{
+  fill: #51A3F3;
+}
+.svg-back{
+  float: left;
+  display: inline-block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 20px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+.back{
+  color: #51A3F3;
+  font-family: "Helvetica Neue";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  float: left;
+  display: inline-block;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
 }
 @media only screen and (max-width: 1200px) {
     .res-div{
