--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -88,6 +88,182 @@ textarea{
   margin-bottom: 30px;
   cursor: pointer;
 }
+button#cancel{
+  height: 40px;
+  width: 90px;
+  border: 1px solid #BDBFD8;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  color: #55616E;
+  font-family: "Circular Std";
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 19px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 15px;
+  float: right;
+}
+button#product{
+  	height: 40px;
+    width: 130px;
+    border-radius: 4px;
+    background-color: #51A3F3;
+    border-radius: 4px;
+    color: #fff;
+    font-family: "Helvetica Neue";
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 20px;
+    float: right;
+    margin-right: 20px;
+}
+.chart-box{
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 15px;
+}
+.svg-blue path{
+  fill: #51A3F3;
+}
+.upload{
+  border: 1px dashed #5171F3;
+  border-radius: 6px;
+  background-color: #FFFFFF;
+  height: 280px;
+  text-align: center;
+}
+.upload-title{
+  color: #55616E;
+  font-family: "Helvetica Neue";
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  margin-top: 97px;
+  margin-bottom: 10px;
+}
+.upload-button{
+  border-radius: 4px;
+  background-color: #51A3F3;
+  color: #FFFFFF;
+  font-family: "Helvetica Neue";
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 30px;
+  height: 36px;
+  width: 136px;
+}
+.grid-input{
+  width: 100%;
+  height: 40px !important;
+  padding-left: 10px;
+}
+.grid-camp-input{
+  max-width: calc(100% - 13px);
+  width: 100%;
+  height: calc(40px - 4px);
+  padding-left: 10px;
+}
+table{
+  max-width: 100%;
+  width: 100%;
+}
+.active-table{
+	background-color: #F8F9FE;
+}
+.sms-table{
+  border: none;
+  max-width: calc(100%);
+  width: 100%;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+}
+.did-table{
+  border: none;
+  max-width: calc(100% - 10px);
+  width: 100%;
+  margin-top: 20px;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+}
+.payment-table{
+  border: none;
+  max-width: 100%;
+  width: 100%;
+  margin-top: 20px;
+}
+.payment-table-2{
+  border: none;
+  max-width: calc(100% - 10px);
+  width: 100%;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+}
+.grid-select{
+  width: calc(100% + 13px);
+  border: 1px solid #EDEEF3;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  height: 44px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
+}
+.grid-camp-select{
+  width: 100%;
+  border: 1px solid #EDEEF3;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  height: 40px;
+}
+.grid-1{
+  margin-left: 15px;
+  width: 29.3%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+.grid-2{
+  margin-left: 15px;
+  width: 69%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+.grid-3{
+  margin-left: 15px;
+  width: 21.0672064777%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+.grid-3-sec{
+  margin-left: 15px;
+  width: 22.2672064777%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
 @media only screen and (max-width: 1200px) {
     .res-div{
       display: inline-block;
