--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -264,8 +264,148 @@ table{
   margin-right: 10px;
   margin-bottom: 15px;
 }
+.grid-4{
+  margin-left: 15px;
+  width: 45.5%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+.grid-4-sec{
+  margin-left: 15px;
+  width: 43.5%;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+.grid-5{
+  width: 46%;
+  display: inline-block;
+  float: left;
+  margin-right: 25px;
+  margin-bottom: 15px;
+}
+.grid-5-second{
+  width: 46%;
+  display: inline-block;
+  float: left;
+  margin-bottom: 15px;
+}
+.delete-image{
+  margin-top: -10px;
+}
+.delete-vendor-image{
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 5px;
+}
+.online{
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+  height: 44px;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  margin-left: 15px;
+  text-align: left;
+}
+.offline{
+  background-color: #F0F1FA;
+  box-shadow: inset 0 -1px 0 0 rgba(189,191,216,0.36);
+  height: 44px;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  margin-left: 15px;
+  text-align: left;
+}
+.navbar{
+  height: 50px;
+  width: 100%;
+  background-color: #FFFFFF;
+  box-shadow: inset 0 1px 0 0 #F8F9FE;
+}
+.nav-text{
+  color: #BDBFD8;
+  font-family: "Circular Std";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align: center;
+  margin-top: 15px;
+}
+.nav-text#active{
+  color: #51A3F3;
+  font-weight: 500;
+}
+.did-info{
+  border-radius: 4px;
+  background-color: #F8F9FE;
+  padding: 10px 13px 10px 14px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.did-info-text{
+  color: #55616E;
+  font-family: "Helvetica Neue";
+  font-size: 12px;
+  line-height: 15px;
+}
+.add-did{
+  float: left;
+  display: inline-block;
+  background-color: #FFFFFF;
+  width: calc(100% - 40px);
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.did-main{
+  display: inline-block;
+  float: left;
+  max-width: 66.8181818182%;
+  width: 100%;
+}
+.did-second{
+  display: inline-block;
+  float: left;
+  max-width: 31.8%;
+  width: 100%;
+  margin-top: 60px;
+}
+.product-did{
+  display: inline-block;
+  float: left;
+  max-width: calc(100% - 58.1818181818%);
+  width: 100%;
+  background-color: #F8F9FE;
+  height: auto;
+}
 @media only screen and (max-width: 1200px) {
     .res-div{
       display: inline-block;
+    }
+    .grid-1, .grid-2, .grid-3, .grid-3-sec, .grid-4, .grid-4-sec{
+      width: calc(50% - 40px);
+    }
+    .grid-5, .grid-5-second{
+      width: calc(50% - 13px);
+    }
+    .did-main{
+      max-width: 100%;
+    }
+    .did-second{
+      margin-top: 0px;
+      max-width: calc(100% - 30px);
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+}
+@media only screen and (max-width: 390px) {
+    .grid-1, .grid-2, .grid-3, .grid-3-sec, .grid-4{
+      width: calc(100% - 40px);
     }
 }
