--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -384,6 +384,285 @@ table{
   background-color: #F8F9FE;
   height: auto;
 }
+.did-add-title{
+  color: #000000;
+  font-family: "Helvetica Neue";
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30px;
+  margin: 15px;
+}
+.product-input-name{
+  color: #000000;
+  font-family: "Circular Std";
+  font-size: 12px;
+  font-weight: 300;
+  letter-spacing: 0.21px;
+  line-height: 15px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  padding-top: 10px;
+}
+.product-control-info{
+  width: 30px;
+  height: 30px;
+  float: left;
+  margin-top: -10px;
+  margin-left: 15px;
+}
+.vendor-table{
+  width: 145px;
+}
+.vendor-table-text{
+  display: inline-block;
+  float: left;
+  width: 80px;
+  margin-bottom: 5px;
+}
+.vendors-info-bar{
+  	height: 18px;
+    width: 60px;
+    border: 1px solid #BDBFD8;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    color: #55616E;
+    font-family: "Circular Std";
+    font-size: 11px;
+    font-weight: 300;
+    line-height: 15px;
+    text-align: center;
+    display: inline-block;
+    float: left;
+    margin-bottom: 5px;
+}
+.vendor-name-fix{
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 7px;
+}
+.vendor-avatar{
+  height: 30px;
+  width: 30px;
+  background-color: #ECEEF0;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 5px;
+}
+.vendors-main{
+  float: left;
+  display: inline-block;
+  width: calc(100% - 40px);
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.vendors-table{
+  border: none;
+  max-width: 100%;
+  width: 100%;
+  margin-top: 20px;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+}
+.vendors-table-th{
+  height: 37px;
+}
+.vendor-active{
+  width: 25px;
+  padding-left: 8px;
+}
+.vendor-company{
+  width: 158px;
+}
+.vendor-contact{
+  width: 168px;
+}
+.vendor-type{
+  width: 70px;
+}
+.vendor-person{
+  width: 167px;
+}
+.vendor-noc{
+  width: 145px;
+}
+.vendor-sales{
+  width: 145px;
+}
+.vendor-rate{
+  width: 165px;
+}
+.vendor-options{
+  width: 50px;
+}
+
+.vendor-active-circle{
+  box-sizing: border-box;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #24E2B8;
+  float: left;
+  margin-left: 3px;
+}
+.vendor-not-active-circle{
+  box-sizing: border-box;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #D2305B;
+  float: left;
+  margin-left: 3px;
+}
+.vendor-input-search{
+  width: 317px;
+  height: 40px;
+  padding-left: 40px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.users-table{
+  border: none;
+  max-width: calc(100% - 10px);
+  width: 100%;
+  margin-top: 20px;
+  color: #212B36;
+  font-family: "SF Pro Text";
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+}
+.user-avatar{
+  height: 30px;
+  width: 30px;
+  background-color: #ECEEF0;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: top;
+}
+.users-avatar-th{
+  width: 45px;
+  padding-left: 8px;
+  height: 37px;
+}
+.users-name-th{
+  width: 204px;
+  height: 37px;
+}
+.users-username-th{
+  width: 169px;
+  height: 37px;
+}
+.users-company-th{
+  width: 182px;
+  height: 37px;
+}
+.users-reseller-th{
+  width: 190px;
+  height: 37px;
+}
+.users-start-th{
+  width: 120px;
+  height: 37px;
+}
+.users-role-th{
+  width: 80px;
+  height: 37px;
+}
+.users-option-th{
+  width: 54px;
+  height: 37px;
+}
+
+
+.users-avatar{
+  width: 45px;
+  padding-left: 8px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-name{
+  width: 204px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-username{
+  width: 169px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-company{
+  width: 182px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-reseller{
+  width: 190px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-start{
+  width: 120px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-role{
+  width: 80px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.users-option{
+  width: 54px;
+  height: 44px;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 0 #F0F1FA;
+}
+.user-header-title{
+  color: #55616E;
+  font-family: "Helvetica Neue";
+  font-size: 14px;
+  line-height: 25px;
+  float: left;
+  margin-left: 20px;
+  display: inline-block;
+  margin-top: 30px;
+}
+.user-input-search{
+  max-width: 26.3636363636%;
+  width: 100%;
+  height: 40px !important;
+  padding-left: 40px;
+  margin-left: 20px;
+  margin-top: 20px;
+  float: left;
+}
+button#users{
+  	height: 40px;
+    max-width: 11.8181818182%;
+    width: 100%;
+    border-radius: 4px;
+    background-color: #51A3F3;
+    border-radius: 4px;
+    color: #fff;
+    font-family: "Helvetica Neue";
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 20px;
+    margin-right: 20px;
+    float: right;
+}
 @media only screen and (max-width: 1200px) {
     .res-div{
       display: inline-block;
@@ -402,6 +681,12 @@ table{
       max-width: calc(100% - 30px);
       margin-left: 15px;
       margin-right: 15px;
+    }
+    .vendor-input-search{
+      max-width: calc(100% - 80px);
+    }
+    .user-input-search{
+      max-width: calc(100% - 80px);
     }
 }
 @media only screen and (max-width: 390px) {
