--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6462,3 +6462,17 @@ button#preview{
       margin-left: 15px;
     }
 }
+.pagination{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.pagination button{
+  padding: 7px 12px;
+  background: #fff;
+  border: solid 1px #dedede;
+  transition: all 0.4s;
+}
+.pagination button:hover{
+  background: #ededed;
+  transition: all 0.4s;
+}
