--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -216,7 +216,7 @@ table{
   max-width: calc(100%);
   width: 100%;
   color: #212B36;
-  font-family: "SF Pro Text";
+  /* font-family: "SF Pro Text"; */
   font-size: 14px;
   line-height: 16px;
   text-align: left;
